fixed css preventing js from working on mobile

--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -116,7 +116,6 @@
       .container-body {
         &.list {
           .order-cards {
-            display: block !important;
 
             .order-card {
               flex-wrap: wrap;
